[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://components/Menu/Label/Label.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/menu_select_3.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/menu_select_4.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "Accept"
length = 0.25
step = 0.01
tracks/0/type = "audio"
tracks/0/path = NodePath("SelectSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 0.0389433,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 0.001, 0.002, 0.25 )
}

[sub_resource type="Animation" id=2]
resource_name = "Deselect"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.34151, 1 ),
"update": 0,
"values": [ Color( 1, 0.74902, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reset"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Select"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.392292, 0.258816 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.74902, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SelectSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 0.001, 0.002, 0.16 )
}

[node name="Label" type="Label"]
margin_right = 61.0
margin_bottom = 14.0
focus_mode = 2
mouse_filter = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.791902, 0.170859, 1 )
text = "LabelText"
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Accept = SubResource( 5 )
anims/Deselect = SubResource( 2 )
anims/Reset = SubResource( 4 )
anims/Select = SubResource( 3 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
bus = "sfx"

[connection signal="focus_entered" from="." to="." method="_on_Label_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Label_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Label_mouse_entered"]
